--- a/DIY Dashboard.ipynb
+++ b/DIY Dashboard.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## What is this project about \n",
-    "This project was done as a part of assignment for ECS780P - Computer Programming. <br>\n",
+    "This project was done as a part of coursework for ECS780P - Computer Programming. <br>\n",
     "The assignment required me to develop a simple dashboard that downloads and displays the data about infectious diseases from the UK Health Security Agency (UKHSA) dashboard. \n",
     "\n",
     "<br>\n",
